--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -1,5 +1,5 @@
 /**
- * Admin CSS v2.0.0
+ * Admin CSS v2.1.0
  * Arquivos de estilo para o painel administrativo do Player
  */
 
@@ -145,18 +145,16 @@
 .overflow-hidden { overflow: hidden !important; }
 
 /* Preloader (adicionado para melhor UX) */
-.preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.98);
+#preloader {
+  position: fixed !important;
+  top: 0; left: 0;
+  width: 100vw;
+  height: 100vh;
   z-index: 9999;
+  background: #fff;
   display: flex;
-  justify-content: center;
   align-items: center;
-  transition: opacity 0.5s ease, visibility 0.5s ease;
+  justify-content: center;
 }
 
 .preloader.loaded {
